--- a/.github/ISSUE_TEMPLATE/test_bug.yml
+++ b/.github/ISSUE_TEMPLATE/test_bug.yml
@@ -2,7 +2,7 @@ name: Bug report
 description: Create a report to help us improve
 title: ""
 issue_body: true
-inputs:
+body:
   - type: description
     attributes:
       value: |
